RESOLVED FIXED217384
REGRESSION(r256892): [WPE][GTK] Build broken with ENABLE_ACCELERATED_2D_CANVAS=ON
https://bugs.webkit.org/show_bug.cgi?id=217384
Summary REGRESSION(r256892): [WPE][GTK] Build broken with ENABLE_ACCELERATED_2D_CANVA...
Adrian Perez
Reported 2020-10-06 07:04:31 PDT
At least some build issues were introduced r256892 / bug #207048
Attachments
Very WIP Patch (2.23 KB, patch)
2020-10-06 07:05 PDT, Adrian Perez
no flags
Patch (5.97 KB, patch)
2020-10-09 16:06 PDT, Adrian Perez
no flags
Adrian Perez
Comment 1 2020-10-06 07:05:57 PDT
Created attachment 410633 [details] Very WIP Patch Patch with a couple of fixes, I expect that more work is needed.
Adrian Perez
Comment 2 2020-10-09 16:06:48 PDT
EWS
Comment 3 2020-10-12 07:32:23 PDT
Committed r268350: <https://trac.webkit.org/changeset/268350> All reviewed patches have been landed. Closing bug and clearing flags on attachment 410979 [details].
Radar WebKit Bug Importer
Comment 4 2020-10-12 07:33:43 PDT
Adrian Perez
Comment 5 2020-10-13 07:53:56 PDT
*** Bug 208523 has been marked as a duplicate of this bug. ***
Adrian Perez
Comment 6 2020-10-13 12:23:03 PDT
*** Bug 216602 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.