REGRESSION(r256892): [WPE][GTK] Build broken with ENABLE_ACCELERATED_2D_CANVAS=ON https://bugs.webkit.org/show_bug.cgi?id=217384

Most of the patch by Žan Doberšek.

Reviewed by Darin Adler.

No new tests needed.

* platform/graphics/cairo/ImageBufferCairoGLSurfaceBackend.cpp: Move the namespace
declaration after the #include statements, to avoid incorrect nested WebCore::WebCore
namespace declarations.
(WebCore::ImageBufferCairoGLSurfaceBackend::create): Add missing semicolon to statement,
use getter for Cairo surface.
(WebCore::ImageBufferCairoGLSurfaceBackend::platformLayer const): Rename from
ImageBuffer::platformLayer.
(WebCore::ImageBufferCairoGLSurfaceBackend::copyToPlatformTexture const): Add missing
first argument.
* platform/graphics/cairo/ImageBufferCairoGLSurfaceBackend.h: Adapt.


Canonical link: https://commits.webkit.org/230360@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268350 268f45cc-cd09-0410-ab3c-d52691b4dbfc